Close T886 model setup guides